hphp/hack/test/decl/namespace_global_body_plus_declarations_outside_body.php.typecheck.exp
File "namespace_global_body_plus_declarations_outside_body.php", line 3, characters 1-37:
No code may exist outside of namespace {} (Parsing[1002])
